release: prepare mxr 0.5.5
